# py-vmtoffsdump

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
vmtoffsdump/: __main__.py  dumper.py
vmtproc/: __init__.py  __main__.py  dumper.py  utils.py
