[metadata]
name = vmtproc
version = 0.1.0
author = nosoop
description = VTable processing library using LIEF.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosoop/py-vtable-dump
classifiers =
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8

install_requires =
    lief >= 0.11.4
    pydemangler @ git+https://github.com/wbenny/pydemangler.git
